# SopHON_YoloV6

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cls/: CMakeLists.txt  Module_cls.cpp  Module_cls.h  Module_cls_c_api.h  Module_cls_impl.cpp  Module_cls_impl.h
cls/jni/: com_malong_ainetdetect_JniCls.cpp
cls/rk356x/: Module_cls_rk356x_impl.cpp  Module_cls_rk356x_impl.h
common/: alg_define.h  data_type.h  data_type_api.h  debug.h
det/: CMakeLists.txt  Module_det.cpp  Module_det.h  Module_det_c_api.h  Module_det_impl.cpp  Module_det_impl.h  post_process.cpp  post_process.h
det/bm1684x/: Module_det_bm1684x_impl.cpp  Module_det_bm1684x_impl.h  Module_det_bm1684x_impl_create.cpp
det/jni/: CMakeLists.txt.bak  com_malong_ainetdetect_JniCls.cpp  com_malong_ainetdetect_JniCls.h
det/rk356x/: Module_det_rk356x_impl.cpp
det/rk35xx/: Module_det_rk35xx_impl.cpp  Module_det_rk35xx_impl.h
det/rv1126/: Module_det_rv1126_impl.cpp  Module_det_rv1126_impl.h  rga_func.cpp  rga_func.h
examples/: CMakeLists.txt  demo_cls_c_api_images.cpp  demo_cls_images.cpp  demo_det_images.cpp  demo_thread_images.cpp  demo_thread_top_side.cpp
models/: README.md  convert.py  mlir_to_int8  onnx_subgraph.py  onnx_to_int8  onnx_to_mlir  post_process.onnx  rename_onnx_model.py  requirements.txt
